pantalla de ejemplo con valores estaticos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: rezize_tablet
+name: resize_tablet
 description: library for risize screen in tablet 
 
 # The following line prevents the package from being accidentally published to
